force-app/main/default/objects/Account/fields/clofor_com_cfs__InterestsForLatePayment__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__InterestsForLatePayment__c</fullName>
    <label>Interests for Late Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>