force-app/main/default/objects/Account/fields/clofor_com_cfs__invoice_pattern_detail__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__invoice_pattern_detail__c</fullName>
    <label>NOTES OF PATTERN OF INVOICE ISSUE</label>
    <type>TextArea</type>
</CustomField>