force-app/main/default/objects/Account/fields/clofor_com_cfs__InvoiceIssueType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__InvoiceIssueType__c</fullName>
    <label>PATTERN OF INVOICE ISSUE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ORIGINALを都度発送</fullName>
            </value>
            <value>
                <fullName>ORIGINALを月末までに発送</fullName>
            </value>
            <value>
                <fullName>コピーを都度発送、ORIGINALを月末までに発送</fullName>
            </value>
            <value>
                <fullName>許可書、納付書をセットし、ORIGINALとまとめて即発送</fullName>
            </value>
            <value>
                <fullName>COD（Cash-On-Delivery）</fullName>
            </value>
            <value>
                <fullName>立替金ORIGINALを毎週金曜日までに発送</fullName>
            </value>
            <value>
                <fullName>ORIGINALを20日までに発送</fullName>
            </value>
            <value>
                <fullName>ORIGINALを20日までに必着</fullName>
            </value>
            <value>
                <fullName>ORIGINALを20日まで発送、21日から月末までのコピーと集計表をメールで送付</fullName>
            </value>
            <value>
                <fullName>なし（パートナーとの清算）</fullName>
            </value>
            <value>
                <fullName>コピーを都度発送、ORIGINALを締日に発送</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>