force-app/main/default/objects/Account/fields/clofor_com_cfs__LatePaymentPenalty__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LatePaymentPenalty__c</fullName>
    <label>Late Payment Penalty</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>