force-app/main/default/objects/Account/fields/clofor_com_cfs__mail__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__mail__c</fullName>
    <inlineHelpText>Target Email Addressee That CloWTM Email Tracking Sent to</inlineHelpText>
    <label>Mail</label>
    <type>Email</type>
</CustomField>