force-app/main/default/objects/Account/fields/clofor_com_cfs__Main_owner__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Main_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MAIN OPERATOR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PIC_main</relationshipName>
    <type>Lookup</type>
</CustomField>