force-app/main/default/objects/Account/fields/clofor_com_cfs__MaxAmountOnBehalfOfUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MaxAmountOnBehalfOfUSD__c</fullName>
    <label>MAX AMOUNT OF ON-BEHALF-OF(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>