force-app/main/default/objects/Account/fields/clofor_com_cfs__numberof_ship__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__numberof_ship__c</fullName>
    <label>TOTAL NO. OF SHIPMENT</label>
    <summaryFilterItems>
        <field>clofor_com_cfs__CustomObject1__c.RecordTypeId</field>
        <operation>notEqual</operation>
        <value>見　積</value>
    </summaryFilterItems>
    <summaryForeignKey>clofor_com_cfs__CustomObject1__c.clofor_com_cfs__Field1__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>