force-app/main/default/objects/Account/fields/clofor_com_cfs__Ownership_cat__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Ownership_cat__c</fullName>
    <label>OWNERSHIP TYPE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>当社ノミカーゴ</fullName>
            </value>
            <value>
                <fullName>パートナーFree-Handカーゴ(輸入のみ）</fullName>
            </value>
            <value>
                <fullName>パートナーノミカーゴ</fullName>
            </value>
            <value>
                <fullName>共同営業</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>