force-app/main/default/objects/Account/fields/clofor_com_cfs__PaidDay__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaidDay__c</fullName>
    <label>DUE DATE OF PAYMENT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>都度</fullName>
            </value>
            <value>
                <fullName>当月末払い</fullName>
            </value>
            <value>
                <fullName>翌月1日払い</fullName>
            </value>
            <value>
                <fullName>翌月5日払い</fullName>
            </value>
            <value>
                <fullName>翌月10日払い</fullName>
            </value>
            <value>
                <fullName>翌月15日払い</fullName>
            </value>
            <value>
                <fullName>翌月20日払い</fullName>
            </value>
            <value>
                <fullName>翌月25日払い</fullName>
            </value>
            <value>
                <fullName>翌月末払い</fullName>
            </value>
            <value>
                <fullName>翌々月1日払い</fullName>
            </value>
            <value>
                <fullName>翌々月5日払い</fullName>
            </value>
            <value>
                <fullName>翌々月10日払い</fullName>
            </value>
            <value>
                <fullName>翌々月15日払い</fullName>
            </value>
            <value>
                <fullName>翌々月20日払い</fullName>
            </value>
            <value>
                <fullName>翌々月25日払い</fullName>
            </value>
            <value>
                <fullName>翌々月末払い</fullName>
            </value>
            <value>
                <fullName>COD（Cash-On-Delivery）</fullName>
            </value>
            <value>
                <fullName>翌週払い</fullName>
            </value>
            <value>
                <fullName>翌々週払い（１０日以内）</fullName>
            </value>
            <value>
                <fullName>納品後5営業日内</fullName>
            </value>
            <value>
                <fullName>納品後1週間内</fullName>
            </value>
            <value>
                <fullName>当月末/翌月15日</fullName>
            </value>
            <value>
                <fullName>なし（パートナーとの清算）</fullName>
            </value>
            <value>
                <fullName>当月15日/当月末払い</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>