force-app/main/default/objects/Account/fields/clofor_com_cfs__PayConditionFromBase__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PayConditionFromBase__c</fullName>
    <label>PAYMENT CONDITION FROM BASE DATE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__Date</valueSetName>
    </valueSet>
</CustomField>