force-app/main/default/objects/Account/fields/clofor_com_cfs__PaymentBaseDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaymentBaseDate__c</fullName>
    <label>PAYMENT BASE DATE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__PayBaseDate</valueSetName>
    </valueSet>
</CustomField>