force-app/main/default/objects/Account/fields/clofor_com_cfs__PLISM_ACCOUNT_ID_PW__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PLISM_ACCOUNT_ID_PW__c</fullName>
    <label>CloFil ACCOUNT ID/PW</label>
    <type>TextArea</type>
</CustomField>