force-app/main/default/objects/Account/fields/clofor_com_cfs__Primary_Exchange_Rate_Currency__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Primary_Exchange_Rate_Currency__c</fullName>
    <inlineHelpText>Choose The Currency Which The Company Prefer to Convert from FCY</inlineHelpText>
    <label>PRIMARY EXCHANGE RATE CURRENCY</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>JPY - Japanese Yen</fullName>
            </value>
            <value>
                <fullName>USD - U.S. Dollar</fullName>
            </value>
            <value>
                <fullName>VND - Vietnam Dong</fullName>
                <default>true</default>
                <label>VND - Vietnam Dong</label>
            </value>
            <value>
                <fullName>KHR - Cambodian Riel</fullName>
            </value>
            <value>
                <fullName>KRW - Korean Won</fullName>
            </value>
            <value>
                <fullName>AUD - Australian Dollar</fullName>
            </value>
            <value>
                <fullName>HKD - Hong Kong Dollar</fullName>
            </value>
            <value>
                <fullName>IDR - Indonesian Rupiah</fullName>
            </value>
            <value>
                <fullName>MMK - Myanmar Kyat</fullName>
            </value>
            <value>
                <fullName>MYR - Malaysian Ringgit</fullName>
            </value>
            <value>
                <fullName>NZD - New Zealand Dollar</fullName>
            </value>
            <value>
                <fullName>PPH - Philippine Peso</fullName>
            </value>
            <value>
                <fullName>THB - Thai Baht</fullName>
            </value>
            <value>
                <fullName>TWD - Taiwan Dollar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>