force-app/main/default/objects/Account/fields/clofor_com_cfs__receivable_limits__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__receivable_limits__c</fullName>
    <label>MAXIMUM AMOUNT OF RECEIVABLES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>