force-app/main/default/objects/Account/fields/clofor_com_cfs__Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Reference_Number__c</fullName>
    <label>REFERENCE NUMBER</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>