force-app/main/default/objects/Account/fields/clofor_com_cfs__REGISTERATION_NO_FORM__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__REGISTERATION_NO_FORM__c</fullName>
    <label>REGISTERATION NO(FORM)</label>
    <length>11</length>
    <type>Text</type>
</CustomField>