force-app/main/default/objects/Account/fields/clofor_com_cfs__Remarks__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Remarks__c</fullName>
    <label>NOTE</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>