force-app/main/default/objects/Account/fields/clofor_com_cfs__RemindEstablishedDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RemindEstablishedDate__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked: auto remind established date (affected by workflow)
Unchecked: not auto remind</description>
    <label>Remind Established Date</label>
    <type>Checkbox</type>
</CustomField>