force-app/main/default/objects/Account/fields/clofor_com_cfs__SalesArea__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SalesArea__c</fullName>
    <label>SALES REGIONS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>