force-app/main/default/objects/Account/fields/clofor_com_cfs__SalesLead__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SalesLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>セールスリードの情報元</description>
    <label>SALES LEAD</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>取引先</relationshipLabel>
    <relationshipName>Sales6</relationshipName>
    <type>Lookup</type>
</CustomField>