force-app/main/default/objects/Account/fields/clofor_com_cfs__servicestartdate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__servicestartdate__c</fullName>
    <label>BUISINESS START DATE</label>
    <type>Date</type>
</CustomField>