force-app/main/default/objects/Account/fields/clofor_com_cfs__StatusType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__StatusType__c</fullName>
    <label>STATUS TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>clofor_com_cfs__Custom_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ACCOUNT_STATUS</valueSetName>
    </valueSet>
</CustomField>