force-app/main/default/objects/Account/fields/clofor_com_cfs__SubOwner__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SubOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SUB OPERATOR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SubOwner</relationshipName>
    <type>Lookup</type>
</CustomField>