force-app/main/default/objects/Account/fields/clofor_com_cfs__SubType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SubType__c</fullName>
    <label>Sub Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>clofor_com_cfs__Custom_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__CompanySubType</valueSetName>
    </valueSet>
</CustomField>