force-app/main/default/objects/Account/fields/clofor_com_cfs__TaxationNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TaxationNumber__c</fullName>
    <label>ACCOUNT NUMBER OF DEFFERED/REAL-TIME</label>
    <type>TextArea</type>
</CustomField>