force-app/main/default/objects/Account/fields/clofor_com_cfs__TotalBadDebtUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalBadDebtUSD__c</fullName>
    <formula>clofor_com_cfs__FMSBadDebtUSD__c +  clofor_com_cfs__WMSBadDebtUSD__c</formula>
    <label>TOTAL BAD DEBT(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>