force-app/main/default/objects/Account/fields/clofor_com_cfs__TotalBadDedtLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalBadDedtLocal__c</fullName>
    <formula>clofor_com_cfs__FMSBadDebtLocal__c +  clofor_com_cfs__WMSBadDebtLocal__c</formula>
    <label>TOTAL BAD DEBT(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>