force-app/main/default/objects/Account/fields/clofor_com_cfs__TotalUnpaid__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalUnpaid__c</fullName>
    <label>THE NUMBER OF TIMES OF THE UNCOLLECTED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>