force-app/main/default/objects/Account/fields/clofor_com_cfs__UncollectedOnBehalfOfLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UncollectedOnBehalfOfLocal__c</fullName>
    <label>UNCOLLECTED ON-BEHALF-OF AMOUNT(LOCAL)</label>
    <summarizedField>clofor_com_cfs__CustomObject1__c.clofor_com_cfs__OnBehalfOfUnreceivedLocal__c</summarizedField>
    <summaryFilterItems>
        <field>clofor_com_cfs__CustomObject1__c.RecordTypeId</field>
        <operation>notEqual</operation>
        <value>Quotation</value>
    </summaryFilterItems>
    <summaryForeignKey>clofor_com_cfs__CustomObject1__c.clofor_com_cfs__Field1__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>