force-app/main/default/objects/Account/fields/clofor_com_cfs__Unpaid__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Unpaid__c</fullName>
    <description>未集金額合計</description>
    <label>UNCOLLECTED AMOUNTS</label>
    <summarizedField>clofor_com_cfs__CustomObject1__c.clofor_com_cfs__NyukinzandakaJPY__c</summarizedField>
    <summaryFilterItems>
        <field>clofor_com_cfs__CustomObject1__c.RecordTypeId</field>
        <operation>notEqual</operation>
        <value>見　積</value>
    </summaryFilterItems>
    <summaryForeignKey>clofor_com_cfs__CustomObject1__c.clofor_com_cfs__Field1__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>