force-app/main/default/objects/Account/fields/clofor_com_cfs__unpaidNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__unpaidNumber__c</fullName>
    <label>NUMBER OF H B/L PAYMENT UNCOLLECTED</label>
    <summaryFilterItems>
        <field>clofor_com_cfs__CustomObject1__c.clofor_com_cfs__HistoryOfUnpaid__c</field>
        <operation>equals</operation>
        <value>○</value>
    </summaryFilterItems>
    <summaryForeignKey>clofor_com_cfs__CustomObject1__c.clofor_com_cfs__Field1__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>