force-app/main/default/objects/Account/fields/clofor_com_cfs__WaringReceivableAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WaringReceivableAmountLocal__c</fullName>
    <label>Warning Receivables Amount(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>