force-app/main/default/objects/Account/fields/clofor_com_cfs__WarningCombinedAmountFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WarningCombinedAmountFCY__c</fullName>
    <label>Warning Combined Amount(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>