force-app/main/default/objects/Account/fields/clofor_com_cfs__WMSBadDebtUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WMSBadDebtUSD__c</fullName>
    <label>WMS BAD DEBT(USD)</label>
    <summarizedField>clofor_com_cfs__WorkOrder__c.clofor_com_cfs__BadDebtUSD__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__WorkOrder__c.clofor_com_cfs__Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>