force-app/main/default/objects/Account/fields/CompanyNoJapan__c.field-meta.xml
<CustomField>
    <fullName>CompanyNoJapan__c</fullName>
    <inlineHelpText>Registration number</inlineHelpText>
    <label>登録番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>